# capella_avoiding_pedestrians

./: .gitattributes  .gitignore  avoiding_pedestrians.cpp  avoiding_pedestrians.hpp  capella_inspection.py
amodel/: avoid_person.txt  bpt2onnx.py  garbage_fire_det.txt  pt2onnx.py
capella_avoiding_pedestrians/: CMakeLists.txt
capella_avoiding_pedestrians/include/capella_avoiding_pedestrians/: avoiding_pedestrians.hpp
capella_avoiding_pedestrians/launch/: avoiding_pedestrians.launch.py
capella_avoiding_pedestrians/src/: avoiding_pedestrians.cpp
capella_inspection_cpp/: CMakeLists.txt  package.xml
capella_inspection_cpp/include/capella_inspection_cpp/: capella_inspection_node.hpp
capella_inspection_cpp/src/: capella_inspection_node.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/capella_avoiding_pedestrians/include/capella_avoiding_pedestrians/: avoiding_pedestrians.hpp
install/capella_avoiding_pedestrians/share/ament_index/resource_index/package_run_dependencies/: capella_avoiding_pedestrians
install/capella_avoiding_pedestrians/share/ament_index/resource_index/parent_prefix_path/: capella_avoiding_pedestrians
install/capella_avoiding_pedestrians/share/capella_avoiding_pedestrians/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/capella_avoiding_pedestrians/share/capella_avoiding_pedestrians/cmake/: capella_avoiding_pedestriansConfig-version.cmake  capella_avoiding_pedestriansConfig.cmake
install/capella_avoiding_pedestrians/share/capella_avoiding_pedestrians/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
person/src/capella_avoiding_pedestrians/: README.md  package.xml
person/src/capella_avoiding_pedestrians/include/capella_avoiding_pedestrians/: avoiding_pedestrians.hpp
person/src/capella_avoiding_pedestrians/launch/: avoiding_pedestrians.launch.py
person/src/capella_avoiding_pedestrians/src/: avoiding_pedestrians.cpp
src/: .gitignore  CMakeLists.txt  package.xml
src/capella_avoiding_pedestrians/: CMakeLists.txt
src/capella_avoiding_pedestrians/include/capella_avoiding_pedestrians/: avoiding_pedestrians.hpp
src/capella_avoiding_pedestrians/src/: avoiding_pedestrians.cpp
src/include/capella_avoiding_pedestrians/: avoiding_pedestrians.hpp
src/launch/: avoiding_pedestrians.launch.py
src/src/: 1.py  1.txt  2.py  3.py  avoid_person.onnx  avoiding_pedestrians.cpp  demo.cpp
